
INCLUDE_DIRECTORIES(
	.
)


FILE(GLOB BussIK_SRCS "*.cpp" )
FILE(GLOB BussIK_HDRS "*.h" )

ADD_LIBRARY(BussIK ${BussIK_SRCS} ${BussIK_HDRS})

INSTALL(TARGETS BussIK
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
